[package]
name = "resurface"
version = "0.1.0"
edition = "2021"
description = "Search AI coding chat history from Claude Code, Codex, and OpenCode"
authors = ["Terry Li"]
license = "MIT"
repository = "https://github.com/terry-li-hm/resurface"

[[bin]]
name = "resurface"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
dirs = "6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
