[package]
name = "anam"
version = "0.1.0"
edition = "2021"
description = "Search AI coding chat history from Claude Code, Codex, and OpenCode"
authors = ["Terry Li"]
license = "MIT"
repository = "https://github.com/terry-li-hm/anam"

[[bin]]
name = "anam"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
dirs = "6"

[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"

[lints.clippy]
# Pre-existing issues in src/main.rs — suppressed at project level rather than
# modifying source files (test-only change policy).
redundant_closure = "allow"
unnecessary_lazy_evaluations = "allow"
